# Yolov8_Hailort_instanc_Seg_ROS2

./: README.md
YOLO-HailoRT-ROS2/yolo_ros_hailort_cpp/: package.xml
YOLO-HailoRT-ROS2/yolo_ros_hailort_cpp/launch/: yolox_hailort.launch.py
YOLO-HailoRT-ROS2/yolo_ros_hailort_cpp/src/: yolo_ros_hailort_cpp.cpp
YOLO-HailoRT-ROS2/yolo_segmen_common/include/yolo_segmen_common/: detection_inference.hpp  utils.hpp
YOLO-HailoRT-ROS2/yolo_segmen_common/src/: yolov8seg_example.cpp
src/yolo_ros_hailort_cpp/include/yolo_ros_hailort_cpp/: yolo_ros_hailort_cpp.hpp
src/yolo_ros_hailort_cpp/src/: yolo_ros_hailort_cpp.cpp
src/yolo_segmen_common/: CMakeLists.txt  package.xml
src/yolo_segmen_common/include/yolo_segmen_common/: detection_inference.hpp  yolo_hailortpp.hpp  yolov8seg_postprocess.hpp
src/yolo_segmen_common/include/yolo_segmen_common/labels/: coco_eighty.hpp
src/yolo_segmen_common/src/: yolov8seg_example.cpp  yolov8seg_postprocess.cpp
